--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sahar Harati - AI & Machine Learning Engineer</title>
+    <title>Sahar Harati - BI Developer & Data Engineer</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/resume.css">
     <link rel="stylesheet" href="css/projects.css">
@@ -37,8 +37,10 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Sahar Harati</h1>
-                <h2>AI & Machine Learning Engineer</h2>
-                <p>Passionate about exploring how AI can advance scientific understanding and improve people's lives.</p>
+                <h2>BI Developer & Data Engineer</h2>
+                <p>Building robust data pipelines & impactful dashboards. 
+                    Passionate about turning data into actionable insights using ETL, Power BI, and data modeling to support informed decision-making.
+                </p>
                 <div class="cta-buttons">
                     <a href="#projects" class="btn primary">View Projects</a>
                     <a href="#contact" class="btn secondary">Contact Me</a>
