--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
                 <a href="#" class="logo">SH</a>
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#resume">Resume</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#research">Research</a></li>
                     <li><a href="#current-plans">Current Plans</a></li>
@@ -44,6 +43,8 @@
                 <div class="cta-buttons">
                     <a href="#projects" class="btn primary">View Projects</a>
                     <a href="#contact" class="btn secondary">Contact Me</a>
+                    <a href="Sahar_Harati_cv.pdf" class="btn secondary" download>Download CV</a>
+
                 </div>
             </div>
         </div>
@@ -104,13 +105,16 @@
                         <span>sahar.harati1999@gmail.com</span>
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
-                        <span>Forchheim, Germany</span>
+                        <span>Genoa, Italy</span>
                     </div>
                 </div>
                 <div class="social-links">
-                    <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="#" aria-label="GitHub"><i class="fab fa-github"></i></a>
-                    <a href="#" aria-label="Kaggle"><i class="fab fa-kaggle"></i></a>
+                    <a href="https://www.linkedin.com/in/sahar-harati/" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://github.com/saharaty" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                    <a href="https://www.kaggle.com/saharaty" aria-label="Kaggle"><i class="fab fa-kaggle"></i></a>
+                    <a href="https://leetcode.com/u/Saharati/" aria-label="LeetCode"><i class="fas fa-code"></i></a>
+                    
+
                 </div>
             </div>
         </div>
