--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="cta-buttons">
                     <a href="#projects" class="btn primary">View Projects</a>
                     <a href="#contact" class="btn secondary">Contact Me</a>
-                    <a href="Sahar_Harati_cv.pdf" class="btn secondary" download>Download CV</a>
+                    <a href="Sahar_Harati_cv.pdf" class="btn secondary" target="_blank">View CV</a>
 
                 </div>
             </div>
