--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
                     </div>
                 </div>
                 <div class="social-links">
-                    <a href="https://t.me/your_username" aria-label="Telegram" target="_blank">
-  <i class="fab fa-telegram-plane"></i> Telegram</a>
+                    <a href="https://t.me/saharaty" aria-label="Telegram" target="_blank"><i class="fab fa-telegram-plane"></i> </a>
                     <a href="https://www.linkedin.com/in/sahar-harati/" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                     <a href="https://github.com/saharaty" aria-label="GitHub"><i class="fab fa-github"></i></a>
                     <a href="https://www.kaggle.com/saharaty" aria-label="Kaggle"><i class="fab fa-kaggle"></i></a>
