--- a/index.html
+++ b/index.html
@@ -67,11 +67,12 @@
             <div class="plans-content">
                 <h3>Current Focus Areas</h3>
                 <ul>
-                    <li>Continuing research on fatal error detection in ultrasound images using transformer models and CNN</li>
-                    <li>Expanding knowledge in deep learning and neural networks with Keras</li>
-                    <li>Developing ETL pipelines for data integration and transformation</li>
-                    <li>Exploring opportunities in AI-driven human modeling</li>
-                    <li>Advancing skills in computer vision and natural language processing</li>
+                    <li>Refining Power BI Dashboard visual design and KPIs.</li>
+                    <li>Developing a real-time NLP + Data Engineering pipeline (Kafka, Airflow, AWS, NLP).</li>
+                    <li>Studying computer vision concepts and techniques.</li>
+                    <li>Learning tombak (Persian percussion instrument) for creative expression.</li>
+                    <li>Diving into AI applications in neuroscience and brain science.</li>
+                    <li>Continuously improving my portfolio and personal website.</li>
                 </ul>
             </div>
         </div>
