--- a/call-center-bi-dashboard.html
+++ b/call-center-bi-dashboard.html
@@ -18,6 +18,8 @@
       <h2>Project Overview</h2>
       <p>This project delivers an end-to-end Business Intelligence (BI) solution for a municipality's call center, designed to enhance decision-making by visualizing call center operations. The dashboard integrates data from 100K+ call records, providing insights into customer interactions, departmental performance, and service efficiency.</p>
       <p>The entire data pipeline adheres to the <strong>Kimball Data Warehouse standard</strong>, featuring a star schema design with <strong>2 fact tables</strong> and <strong>6 dimension tables</strong>. This model ensures efficient querying and robust reporting capabilities.</p>
+    <section>
+    <section>     
       <p>You can view the full project documentation, including data model diagrams and KPI definitions:</p>
       <a href="sahar harati.pdf" target="_blank">Download Full Project Report (PDF)</a>
     </section>
